--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React + TS</title>
+  <link rel="icon" href="./public/pussy_finder_logo.jpg" />
+  <title>Pussy Finder</title>
 </head>
 
 <body>
