--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="overflow-x-hidden" id="root"></div>
+  <div class="overflow-x-hidden min-h-[100vh]" id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
